# hello-world-py

./: Dockerfile  README.md  entrypoint.sh  hello.py  main.py  pyproject.toml  requirements.txt
